# jameraServer76

./: Avesta Restarter.BAT  README.md  backup.bat  config.lua  database.sql  ot_teste3.sql  otserv.service
data/: commands.xml  copy.lua  functions.lua  global.lua  realvocations.xml  stages.xml  vocations.xml
data/actions/: actions.xml
data/creaturescripts/: creaturescripts.xml
data/global/: functions.lua  quest-log.lua
data/items/: items.otb  items.xml
data/monster/: amazon.xml  ancientscarab.xml  apocalypse.xml  ashmunrah.xml  assassin.xml  badger.xml  bandit.xml  banshee.xml  barbarianbloodwalker.xml  barbarianbrutetamer.xml  barbarianheadsplitter.xml  barbarianskullhunter.xml  bat.xml  bazir.xml  bear.xml  behemoth.xml  beholder.xml  blackhunter.xml  blackknight.xml  blacksheep.xml  bluedjinn.xml  bonebeast.xml  bug.xml  carniphila.xml  caverat.xml  centipede.xml  chicken.xml  cobra.xml  crab.xml  crocodile.xml  cryptshambler.xml  crystalspider.xml  cyclops.xml  darkmonk.xml  deer.xml  demodras.xml  demon.xml  demonskeleton.xml  dharalion.xml  dipthrah.xml  (+112 more)
data/movements/: movements.xml
data/movements_/: movements.xml
data/npc/: A Prisoner.xml  A Strange Fellow.xml  A Sweaty Cyclops.xml  A Wrinkled Beholder.xml  (+308 more)
source 7.6/: Makefile  Makefile.am  Makefile.in  account.cpp  account.h  aclocal.m4  actions.cpp  actions.h  allocator.h  ban.cpp  ban.h  beds.cpp  beds.h  build.sh  chat.cpp  chat.h  combat.cpp  combat.h  commands.cpp  commands.h  condition.cpp  condition.h  config.h  config.h.in~  config.status  configmanager.cpp  configmanager.h  configure  configure.ac  connection.cpp  connection.h  const76.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  cylinder.h  database.cpp  (+81 more)
source 7.6/.deps/: account.Po  actions.Po  allocator.Po  ban.Po  baseevents.Po  beds.Po  chat.Po  combat.Po  commands.Po  condition.Po  configmanager.Po  connection.Po  container.Po  creature.Po  creatureevent.Po  cylinder.Po  database.Po  databasemysql.Po  databasesqlite.Po  depot.Po  exception.Po  fileloader.Po  game.Po  house.Po  housetile.Po  ioaccount.Po  iomapotbm.Po  iomapserialize.Po  iomapxml.Po  ioplayer.Po  item.Po  items.Po  logger.Po  luascript.Po  mailbox.Po  map.Po  md5.Po  monster.Po  monsters.Po  movement.Po  (+30 more)
source 7.6/autom4te.cache/: output.0  requests  traces.0  traces.1
source 7.6/devcpp/: Makefile.win  Tibia World RPG OldSchool.dev  Tibia World RPG OldSchool.layout  Tibia_World_RPG_OldSchool_private.h  Tibia_World_RPG_OldSchool_private.rc
(+437 files in other folders)
